--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -216,7 +216,8 @@ body{
     top: 25%;
 
     display: none;
-    border: solid;
+    border: solid 5px #525863;
+    border-radius: 20px;
     background: white;
     flex-direction: column;
     justify-content: center;
@@ -267,6 +268,7 @@ body{
         text-align: center;
         width: 98%;
         padding: 5%;
+        background-color: rgba(255,187,114,0.9);        
         .monthBar {
             h2 {
                 font-size: 60px;                    
@@ -278,6 +280,7 @@ body{
             align-items: center;  
         }
         .dateBox {
+            background-color: white;
             border: solid;
             height: inherit;
             ul,li {
@@ -285,11 +288,20 @@ body{
                 padding: 0px;
                 list-style: none;
             }
-
             li {
                 text-align: center;
                 margin-top: 10px;
                 flex:auto;
+            }
+            .record {
+                border: 3px #76849A solid;
+                background-color: wheat;
+                padding: 5px;
+                border-radius: 12px;
+            }
+
+            #closeDiaryButton {
+                margin-top: 200px;
             }
             .weekdays {
                 text-transform: uppercase; 
