--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -33,18 +33,18 @@
 					{{#each dates}}
 					<div {{#if today}}class="date today" {{/if}} class="date" id={{id}} onclick="openDiary(this.id)">
 						<p id="dateNumber">{{dateNumber}}</p>
-						<img id="emoji" src="../images/{{image}}">
+						<img id="emoji" src="../images/Emotions/{{image}}">
 
 						<div class='calendarModal' id="diary">
 							<div class="top">
 								<h5>{{month}}/{{dateNumber}}/2018</h5>
-								<img id="emoji" src="../images/{{image}}">
+								<img id="emoji" src="../images/Emotions/{{image}}">
 							</div>
 							<ol>
 								{{#records}}
-								<li>
-									{{time}}:
-									<img id="emoji" src="../images/{{emoji}}">
+								<li class="record" onclick="openRecord({{time}})">
+									<span class="timeStamp">{{time}}:</span>
+									<img id="emoji" src="../images/Emotions/{{emoji}}">
 								</li>
 								{{/records}}
 							</ol>
@@ -90,7 +90,6 @@
 			$('#memo').hide();
 			e.stopPropagation();
 		})
-
 
 	</script>
 </body>
