--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -295,6 +295,7 @@ body{
                 list-style: none;
             }
             li {
+                font-size: 50px;
                 text-align: center;
                 margin-top: 10px;
                 flex:auto;
@@ -334,8 +335,9 @@ body{
                     padding: 0;
                     border: solid;
                     img {
-                        width: 40px;
-                        height: 40px;
+                        margin-top: 30px;
+                        width: 50px;
+                        height: 50px;
                     }
                 }
 
@@ -439,4 +441,6 @@ body{
     button {
         font-size: 40px;
     }
+
+
 }
