--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -61,11 +61,14 @@
 	</div>
 </div>
 
+
 	<div class="bar">
 		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">Calendar</button>
-		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">Raccoon<br>Book</button>
+		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">Raccoon
+			<br>Book</button>
 		<button type="button" class="menu" id="homeButton" onclick="window.location='home.handlebars'">Yard</button>
-		<button type="button" class="menu" id="emptyButton"></button>
+		<button type="button" class="menu" id="emptyButton" disabled>Market
+			<br>Coming Soon!</button>
 		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">Setting</button>
 	</div>
 
