--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -394,8 +394,8 @@ body{
 .login {
 
     //test
-    //display: flex;    
-    display: none;
+    display: flex;    
+    //display: none;
 
     position: fixed;
     height: 120%;
