--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -172,9 +172,10 @@
 				},
 				data: [{
 					type: "pie",
-					indexLableFontSize: 40,
+					startAngle:25,
 					backgroundColor: "rgba(255,187,114,0.9)",
 					radius: 100,
+					indexLableFontSize: 20,					
 					indexLabel: "{emotion} - {y}",
 					yValueFormatString: "###0.0\"%\"",
 					click: explodePie,
