--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,6 @@ body {
     width: 100%; }
   .content .modal {
     /*make the whole modal centered in the middle*/
-    border: solid red;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -36,7 +35,6 @@ body {
     .content .modal .modalMessage {
       height: 70%;
       width: 70%;
-      border: solid blue;
       padding: 10%;
       margin: 10%;
       border-radius: 20px;
@@ -47,7 +45,6 @@ body {
     .content .modal .modalButton {
       width: 100%;
       height: 15%;
-      border: solid green;
       padding-top: 5%; }
       .content .modal .modalButton button {
         font-size: 40px;
@@ -68,7 +65,6 @@ body {
         background-color: #8FFFA9; }
   .content .scanningModal {
     position: fixed;
-    border: solid yellow;
     width: 100%;
     top: 3%;
     display: none;
@@ -156,6 +152,76 @@ body {
     height: 4%;
     top: 1em;
     right: 1em; }
+  .content .raccoonbookBox {
+    height: 80%;
+    width: 80%;
+    border: 10px #525863 solid;
+    border-radius: 40px;
+    background-color: #E9C8B5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .content .raccoonbookBox h1 {
+      font-size: 70px; }
+    .content .raccoonbookBox .raccoons {
+      margin: 5%;
+      display: grid;
+      grid-template-columns: auto auto auto;
+      width: 85%;
+      height: 85%; }
+      .content .raccoonbookBox .raccoons .raccoon {
+        margin: 5%;
+        width: 90%;
+        height: 90%;
+        border: 5px solid black;
+        border-radius: 20px;
+        background-color: bisque;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden; }
+        .content .raccoonbookBox .raccoons .raccoon img {
+          max-height: 40%;
+          max-width: 90%; }
+        .content .raccoonbookBox .raccoons .raccoon p {
+          font-size: 40px;
+          background-color: azure;
+          border: #76849A solid 3px;
+          border-radius: 20px;
+          width: 90%;
+          margin-top: 20%; }
+    .content .raccoonbookBox .raccoonDiscription {
+      position: absolute;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      height: 40%;
+      background-color: blanchedalmond;
+      border-radius: 20px;
+      border: solid #76849A 10px;
+      padding: 20px; }
+      .content .raccoonbookBox .raccoonDiscription #name {
+        font-size: 45px; }
+      .content .raccoonbookBox .raccoonDiscription img {
+        max-width: 80%;
+        max-height: 40%;
+        border: solid 4px #525863;
+        overflow: hidden;
+        background-color: white; }
+      .content .raccoonbookBox .raccoonDiscription p {
+        height: 40%;
+        word-wrap: break-word;
+        font-size: 30px;
+        overflow: scroll; }
+      .content .raccoonbookBox .raccoonDiscription button {
+        font-size: 40px;
+        width: 30%;
+        border: solid #525863 5px;
+        border-radius: 10px; }
 
 #memo {
   width: 40%;
