--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -19,7 +19,7 @@ body{
 
     .modal {
         /*make the whole modal centered in the middle*/
-        border:solid red;
+        //border:solid red;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -38,7 +38,7 @@ body{
         .modalMessage {
             height: 70%;
             width:70%;
-            border: solid blue;
+            //border: solid blue;
             padding: 10%;
             margin: 10%;
 
@@ -53,7 +53,7 @@ body{
         .modalButton{
             width:100%;
             height: 15%;
-            border: solid green;
+            //border: solid green;
             padding-top: 5%;
             button {
                 font-size: 40px;
@@ -82,7 +82,7 @@ body{
 
     .scanningModal {
         position: fixed;
-        border: solid yellow;
+        //border: solid yellow;
         width: 100%;
         top:3%;
         display: none;
@@ -194,6 +194,94 @@ body{
         height: 4%;
         top: 1em;
         right: 1em;
+    }
+
+    .raccoonbookBox {
+        height: 80%;
+        width: 80%;
+        border: 10px #525863 solid;
+        border-radius: 40px;
+        background-color: #E9C8B5;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+        h1 {
+            font-size: 70px;
+        }
+        .raccoons {
+            margin: 5%;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            //border: blue solid 5px;
+            width: 85%;
+            height: 85%;
+
+            .raccoon {
+                margin: 5%;
+                width: 90%;
+                height: 90%;
+                border: 5px solid black;
+                border-radius: 20px;
+                background-color: bisque;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center; 
+                overflow: hidden;
+                img {
+                    max-height: 40%;
+                    max-width: 90%;
+                }
+                p {
+                    font-size: 40px;
+                    background-color: azure;
+                    border: #76849A solid 3px;
+                    border-radius: 20px;
+                    width: 90%;
+                    margin-top: 20%;
+                }
+            }
+        }
+
+        .raccoonDiscription {
+            position: absolute; 
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; 
+            width: 50%;
+            height: 40%;
+            background-color: blanchedalmond;
+            border-radius: 20px;
+            border: solid #76849A 10px;
+            padding: 20px;
+
+            #name {
+                font-size: 45px;
+            }
+            img {
+                max-width: 80%;
+                max-height: 40%;
+                border: solid 4px #525863;
+                overflow:hidden;
+                background-color: white; 
+            }
+            p {
+                height: 40%;
+                word-wrap: break-word;
+                font-size: 30px;
+                overflow: scroll;
+            }
+
+            button {
+                font-size: 40px;
+                width: 30%;
+                border: solid #525863 5px;
+                border-radius: 10px;
+            }
+        }
     }
 }
 
