--- a/views/setting.handlebars
+++ b/views/setting.handlebars
@@ -5,6 +5,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/setting-style.css">
 
 	<!-- JS -->
 	<!--<script src="../js/bootstrap.js"></script>-->
@@ -12,8 +13,27 @@
 </head>
 <body>
 	<div class="content setting"> 
-        This is setting page.
-    </div>
+
+	        <div class="titleBox">
+	        	<h1 id="titleText">Settings</h1>
+	        </div>
+
+	        <div class="settingBox">
+	        	<h2 id="soundText">Sound:</h2>
+	        	<div class="slideContainer">
+	        		<input type="range" min="1" max="100" value="50"
+	        		class="slider" id="myRange">
+	        	</div>
+	        	<h2 id="sfxText">SFX:</h2>
+	        	<div class="slideContainer">
+	        		<input type="range" min="1" max="100" value="50"
+	        		class="slider" id="myRange">
+	        	</div>
+	        	<div class="tutorialBox">
+	        		<button type="button" id="tutorial">Tutorial</button>
+	        	</div>
+		    </div>
+	</div>
 
 
 	<div class="bar">
