--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 body {
-  font-family: 'Sniglet', cursive;
-  max-width: 1000px; }
+  font-family: 'Sniglet', cursive; }
 
 .content {
   height: 88%;
@@ -13,6 +12,51 @@ body {
   background-size: 100% auto; }
   .content h1 {
     width: 100%; }
+  .content .quizModal {
+    position: fixed;
+    top: 25%;
+    bottom: 30%;
+    left: 15%;
+    right: 15%;
+    font-size: 45px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .content .quizModal .raccoon {
+      max-width: 300px;
+      max-height: 300px;
+      transform: translate(0%, -50%); }
+    .content .quizModal .quizQuestion {
+      height: 60%;
+      width: 70%;
+      border: solid #525863 5px;
+      border-radius: 80px;
+      background-color: rgba(233, 200, 181, 0.8);
+      margin-bottom: 10%;
+      color: black; }
+      .content .quizModal .quizQuestion p {
+        transform: translate(0%, -50%); }
+    .content .quizModal .quizButton {
+      width: 100%;
+      height: 15%;
+      padding-top: 5%; }
+      .content .quizModal .quizButton button {
+        font-size: 40px;
+        height: 100%;
+        width: 30%;
+        margin-left: 4%;
+        margin-right: 4%;
+        text-align: center;
+        display: inline-block;
+        border-radius: 50px;
+        border: solid 3px #76849A;
+        color: #000000;
+        transition-duration: 0.2s; }
+      .content .quizModal .quizButton #quizYesButton {
+        background-color: rgba(157, 255, 128, 0.8); }
+      .content .quizModal .quizButton #quizNoButton {
+        background-color: rgba(241, 114, 114, 0.8); }
   .content .modal {
     /*make the whole modal centered in the middle*/
     position: fixed;
@@ -140,19 +184,51 @@ body {
     align-items: center;
     border-radius: 20px;
     border: solid 3px #76849A;
-    background-color: white; }
+    background-color: #E9C8B5; }
     .content .scanResultModal input {
       font-size: 25px; }
-    .content .scanResultModal #resultChartContainer {
-      height: 50%;
-      width: 80%; }
+    .content .scanResultModal ul {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; }
+    .content .scanResultModal li {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 10px; }
+      .content .scanResultModal li .emoji {
+        margin-right: 20px; }
+      .content .scanResultModal li img {
+        width: 60px;
+        height: 60px; }
+    .content .scanResultModal #resultMemo {
+      width: 90%;
+      height: 50px;
+      margin: 20px; }
+    .content .scanResultModal .buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center; }
+    .content .scanResultModal button {
+      margin: 30px;
+      padding: 10px;
+      font-size: 40px;
+      border: 6px #525863 solid;
+      border-radius: 20px;
+      background-color: #ff9e66; }
   .content #startScanButton {
     font-size: 45px;
     position: fixed;
-    width: 12%;
-    height: 4%;
+    width: 130px;
+    height: 130px;
     top: 1em;
-    right: 1em; }
+    right: 1em;
+    border: 5px #525863 solid;
+    border-radius: 20px;
+    background-color: #E9C8B5; }
   .content .raccoonbookBox {
     height: 80%;
     width: 80%;
@@ -345,13 +421,19 @@ body {
 
 .bar {
   height: 12%;
-  border: solid;
   display: flex;
+  background-image: url("../images/pawbg.jpg");
   flex-direction: row;
   justify-content: center;
   align-items: center; }
   .bar button {
-    font-size: 30px; }
+    margin: 15px;
+    font-size: 30px;
+    border: solid 10px #525863;
+    width: 160px;
+    height: 160px;
+    border-radius: 20px;
+    background-color: #fcc19f; }
 
 .menu {
   margin: 5px;
