--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -558,7 +558,22 @@ body{
         width: 160px;
         height: 160px;
         border-radius: 20px;
-        background-color: rgb(252, 193, 159);                        
+        background-color: rgb(252, 193, 159);               
+    }
+
+    #calendarButton, #bookButton, #emptyButton, #settingButton{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            max-width: 100px;
+            max-height: 100px;
+        }
+    } 
+
+    #homeButton {
+        width: 190px;
+        height: 220px;
     }
 }
 
