--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -39,7 +39,7 @@
 							<div class="top">
 								<h5>{{month}}/{{dateNumber}}/2018</h5>
 								<img id="emoji" src="../images/Emotions/{{image}}">
-							</div>	
+							</div>
 							<ol class="records">
 								{{#records}}
 								<li class="record">
@@ -61,15 +61,19 @@
 
 
 	<div class="bar">
-		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">Calendar</button>
-		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">Raccoon
-			<br>Book</button>
-		<button type="button" class="menu" id="homeButton" onclick="window.location='home.handlebars'">Yard</button>
+		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">
+			<img src="../images/Navigation/calendar.png">
+		</button>
+		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">
+			<img src="../images/Navigation/photoalbum.png">
+		</button>
+		<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
 		<button type="button" class="menu" id="emptyButton" disabled>Market
 			<br>Coming Soon!</button>
-		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">Setting</button>
+		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
+			<img src="../images/Navigation/settings.png">
+		</button>
 	</div>
-
 
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script>
