--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -73,7 +73,7 @@
 					<img src="../images/Emotions/sad.png" class="emoji">
 				</li>
 				<li id="resultContempt">
-					<img src="../images/Emotions/content.png" class="emoji">
+					<img src="../images/Emotions/contempt.png" class="emoji">
 				</li>
 				<li id="resultFear">
 					<img src="../images/Emotions/fear.png" class="emoji">
@@ -94,13 +94,18 @@
 	</div>
 
 	<div class="bar">
-		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">Calendar</button>
-		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">Raccoon
-			<br>Book</button>
-		<button type="button" class="menu" id="homeButton" onclick="window.location='home.handlebars'">Yard</button>
+		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">
+			<img src="../images/Navigation/calendar.png">
+		</button>
+		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">
+			<img src="../images/Navigation/photoalbum.png">
+		</button>
+		<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
 		<button type="button" class="menu" id="emptyButton" disabled>Market
 			<br>Coming Soon!</button>
-		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">Setting</button>
+		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
+			<img src="../images/Navigation/settings.png">			
+		</button>
 	</div>
 
 	<!-- work flow-->
