--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -73,7 +73,7 @@
 				</div>
 				<div class="raccoon">
 					<img src="../images/Racoons/racoon_revelle.png">
-					<p>Revelle</p>					
+					<p>Revelle</p>
 				</div>
 				<div class="raccoon">
 					<img src="../images/Racoons/racoon_marshall.png">
@@ -100,22 +100,29 @@
 				<h2 id="name"></h2>
 				<img id="profilePic" src="">
 				<p id="discrption">
-					Morbi scelerisque quam risus. Ut consequat consectetur lectus id maximus. Maecenas diam quam, tristique lacinia facilisis sed, cursus in felis. Maecenas sit amet ultrices orci, quis vehicula ligula. Sed bibendum at turpis ac vulputate. Mauris eget odio sodales, bibendum eros eu, tempor erat.
+					Morbi scelerisque quam risus. Ut consequat consectetur lectus id maximus. Maecenas diam quam, tristique lacinia facilisis
+					sed, cursus in felis. Maecenas sit amet ultrices orci, quis vehicula ligula. Sed bibendum at turpis ac vulputate. Mauris
+					eget odio sodales, bibendum eros eu, tempor erat.
 				</p>
-				<button type="button" id="closeDpt">back</button>				
+				<button type="button" id="closeDpt">back</button>
 			</div>
 		</div>
 	</div>
 
 
 	<div class="bar">
-		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">Calendar</button>
-		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">Raccoon
-			<br>Book</button>
-		<button type="button" class="menu" id="homeButton" onclick="window.location='home.handlebars'">Yard</button>
+		<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">
+			<img src="../images/Navigation/calendar.png">
+		</button>
+		<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">
+			<img src="../images/Navigation/photoalbum.png">
+		</button>
+		<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
 		<button type="button" class="menu" id="emptyButton" disabled>Market
 			<br>Coming Soon!</button>
-		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">Setting</button>
+		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
+			<img src="../images/Navigation/settings.png">
+		</button>
 	</div>
 
 	<!--Popup Profile-->
@@ -132,13 +139,13 @@
 			e.stopPropagation()
 		});
 
-		$(".raccoon").on("click", function(e) {
-			$(".raccoonDiscription").fadeIn(200).css("display", "flex");			
+		$(".raccoon").on("click", function (e) {
+			$(".raccoonDiscription").fadeIn(200).css("display", "flex");
 			$("#name").text($(e.target).closest("div").find("p").text());
 			$("#profilePic").attr("src", $(e.target).closest("div").find("img")[0].src);
 		})
 
-		$("#closeDpt").on("click", function() {
+		$("#closeDpt").on("click", function () {
 			$(".raccoonDiscription").fadeOut(200);
 		})
 	</script>
