--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -21,10 +21,9 @@
 <body onload="startGame()">
 
 	<canvas class="game" id="myGameCanvas">
-
 	</canvas>
 
-	<div class="content">
+	<div class="content homePage">
 		<button type="button" id="startScanButton">Start</button>
 		<div class="modal" id="startScanDiv">
 			<div class="modalMessage">
