--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -83,6 +83,9 @@
 				<li id="resultDisgust">
 					<img src="../images/Emotions/disgust.png" class="emoji">
 				</li>
+				<li id="resultSurprise">
+					<img src="../images/Emotions/surprise.png" class="emoji">
+				</li>
 			</ul>
 			<input type="text" placeholder="What are you thinking about..." id="resultMemo">
 			<div class="buttons">
@@ -103,14 +106,12 @@
 		<button type="button" class="menu" id="emptyButton" disabled>Market
 			<br>Coming Soon!</button>
 		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
-			<img src="../images/Navigation/settings.png">			
+			<img src="../images/Navigation/settings.png">
 		</button>
 	</div>
 
 	<!-- work flow-->
 	<script>
-		var t = new Date();
-		console.log(t);
 
 		var resultOriginState = $('#emotionRateList').clone();
 		function log(node_name, msg) {
@@ -158,7 +159,6 @@
 				if (isScanFinished) {
 					$("#scanResultDiv").fadeIn(100).css("display", "flex");
 				}
-
 			}
 		}
 
@@ -243,6 +243,54 @@
 			resultObj["joy"] = rateResult(resultObj["joy"] / overall * 100);
 			resultObj["sadness"] = rateResult(resultObj["sadness"] / overall * 100);
 			resultObj["surprise"] = rateResult(resultObj["surprise"] / overall * 100);
+			return resultObj;
+		}
+
+		function getEmojiByRating(resultObj) {
+			var i;
+			var j = resultObj["anger"];
+			if (resultObj["anger"] > j) {
+				j = resultObj["anger"];
+				i = "anger.png";
+			}
+			if (resultObj["contempt"] > j) {
+				j = resultObj["contempt"];
+				i = "contempt.png";
+			}
+			if (resultObj["disgust"] > j) {
+				j = resultObj["disgust"];
+				i = "disgust.png";
+			}
+			if (resultObj["fear"] > j) {
+				j = resultObj["fear"];
+				i = "fear.png";
+			}
+			if (resultObj["joy"] > j) {
+				j = resultObj["joy"];
+				i = "joy.png";
+			}
+			if (resultObj["sadness"] > j) {
+				j = resultObj["sadness"];
+				i = "sad.png";
+			}
+			if (resultObj["surprise"] > j) {
+				j = resultObj["surprise"];
+				i = "surprise.png";
+			}
+			return i;
+		}
+
+		function postResult(memo, stringObj) {
+			var t = new Date();
+
+			var resultJson = {
+				"hour": t.getHours(),
+				"minute": t.getMinutes(),
+				"emoji": getEmojiByRating(resultObj),
+				"emotion": JSON.parse(stringObj),
+				"memoText": memo
+			};
+			$.post("/", resultJson);
 		}
 
 		var timer = new Timer();
@@ -251,6 +299,7 @@
 			output.text("Scanning... " + timer.getTimeValues().toString() + "s left...");
 		});
 
+		var obj;
 		timer.addEventListener('targetAchieved', function (e) {
 			e.preventDefault();
 			detector.stop();
@@ -259,7 +308,7 @@
 			$("notCenteredMessage").hide();
 			$(".affectivaTest").fadeOut(100);
 			output.text("Scanning done!");
-			finalizeResult(resultObj);
+			resultObj = finalizeResult(resultObj);
 			//console.log(JSON.stringify(resultObj));
 			//log('#avgRes', "Emotions in average: " + JSON.stringify(resultObj));
 			$("#scanStopButton").fadeOut(100);
@@ -282,6 +331,11 @@
 			for (var i = 0; i < resultObj["disgust"]; i++) {
 				$("#resultDisgust").append('<img src="../images/rate_star.png">');
 			};
+			for (var i = 0; i < resultObj["surprise"]; i++) {
+				$("#resultSurprise").append('<img src="../images/rate_star.png">');
+			};
+
+			obj = JSON.stringify(resultObj);
 
 			isScanFinished = true;
 
@@ -354,6 +408,8 @@
 		});
 
 		$("#resultDoneButton").on("click", function () {
+
+			postResult($('#resultMemo').val(), obj);
 			$('#emotionRateList').replaceWith(resultOriginState);
 			$("#startScanButton").prop("disabled", false);
 			$("#notCenteredMessage").fadeOut(100);
